--- a/01-expressmovies/package.json
+++ b/01-expressmovies/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.1.2",
     "multer": "^1.3.0"
   },
   "devDependencies": {
