--- a/02-snake/package.json
+++ b/02-snake/package.json
@@ -17,5 +17,8 @@
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
